--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-  to be made
-  <div class="cbox"><<iframe src="https://www3.cbox.ws/box/?boxid=3552786&boxtag=HGQffw" width="100%" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe></div>
+  <div class="main"></div>
+  <div class="top"><img src="top.svg"></div>
+  <div class="cbox"><iframe src="https://www3.cbox.ws/box/?boxid=3552786&boxtag=HGQffw" width="100%" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe></div>
 <div class="bgtext" id="bgtext">Welcome</div>
 <script src="bgchanger.js"></script>
   </body>
